src/test/ui/or-patterns/consistent-bindings.stderr
warning: the feature `or_patterns` is incomplete and may cause the compiler to crash
  --> $DIR/consistent-bindings.rs:5:12
   |
LL | #![feature(or_patterns)]
   |            ^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/consistent-bindings.rs:44:9
   |
LL |     let () = 0;
   |         ^^ expected integer, found ()
   |
   = note: expected type `{integer}`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
